--- a/public/css/login_signup.css
+++ b/public/css/login_signup.css
@@ -21,7 +21,8 @@
     background-color: rgba(255, 255, 255, 0.579);
     padding: 3rem 2rem;
     width: 380px;
-    border-radius: 15px
+    border-radius: 15px;
+    margin-bottom: 2.2rem;
 }
 
 .loginSignup .lup {
