--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,8 +19,10 @@
     <link rel="stylesheet" href="/css/show.css">
     <link rel="stylesheet" href="/css/login_signup.css">
     <link rel="stylesheet" href="/css/edit.css">
-
-
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         * {
             margin: 0px;
@@ -78,7 +81,8 @@
                 </div>
                 <input type="text" placeholder="Enter username" autocomplete="off" name="username" required>
                 <input type="email" placeholder="Enter email" autocomplete="off" name="email" required>
-                <input type="password" placeholder="Enter password" autocomplete="current-password" name="password" required>
+                <input type="password" placeholder="Enter password" autocomplete="current-password" name="password"
+                    required>
                 <div class="lbtns">
                     <button type="submit">SignUp</button>
                     <button type="button" class="loginBtns">Existing user?</button>
@@ -88,20 +92,21 @@
         <% if(success && success.length || error && error.length){ %>
             <div id="success-message" class="success-message">
                 <%= success %>
-                <%= error %>
+                    <%= error %>
             </div>
             <% } %>
                 <%- body %>
-                    <script src="/js/loginSignup.js"></script>
-                    <script src="/js/nav.js"></script>
-                    <script> document.addEventListener("DOMContentLoaded", function () {
-                            const successMessage = document.getElementById('success-message');
-                            if (successMessage) {
-                                setTimeout(() => {
-                                    successMessage.style.display = 'none';
-                                }, 3000); // 4 seconds, adjust as needed
-                            }
-                        });</script>
+                    <%- include('../includes/footer.ejs') %>
+                        <script src="/js/loginSignup.js"></script>
+                        <script src="/js/nav.js"></script>
+                        <script> document.addEventListener("DOMContentLoaded", function () {
+                                const successMessage = document.getElementById('success-message');
+                                if (successMessage) {
+                                    setTimeout(() => {
+                                        successMessage.style.display = 'none';
+                                    }, 3000); // 4 seconds, adjust as needed
+                                }
+                            });</script>
 </body>
 
 </html>
