--- a/views/body/add.ejs
+++ b/views/body/add.ejs
@@ -14,7 +14,8 @@
             <input type="Number" name="price" placeholder="Enter Price" required>
             <input type="text" name="location" placeholder="Enter Location" required>
             <input type="text" name="country" placeholder="Enter Country" required>
-            <select name="ctgry" id="ctgry">
+            <span> Select Category</span>
+            <select name="ctgry" id="ctgry" placeholder="catagory">
                 <option value="Historic">Historic</option>
                 <option value="Beach">Beach</option>
                 <option value="Birthday">Birthday</option>
