Added some more categories

--- a/views/body/add.ejs
+++ b/views/body/add.ejs
@@ -4,7 +4,7 @@
         <form action="/add" method="post" class="add" enctype="multipart/form-data">
             <div class="up">
                 <h1>Fill information</h1>
-               <a href="/home"> <i class="ri-close-line"></i></a>
+                <a href="/home"> <i class="ri-close-line"></i></a>
             </div>
             <input type="text" name="title" placeholder="Enter title" required>
             <!-- <input type="text" name="image" placeholder="Paste image link" required> -->
@@ -18,8 +18,13 @@
             <select name="ctgry" id="ctgry" placeholder="catagory">
                 <option value="Historic">Historic</option>
                 <option value="Beach">Beach</option>
-                <option value="Birthday">Birthday</option>
-                <option value="Rainy">Rainy</option>
+                <option value="Boats">Boats</option>
+                <option value="Camping">Camping</option>
+                <option value="Islands">Islands</option>
+                <option value="Mansion">Mansion</option>
+                <option value="Room">Room</option>
+                <option value="Snow">Snow</option>
+
             </select>
             <button type="submit">Submit</button>
         </form>
