--- a/views/body/home.ejs
+++ b/views/body/home.ejs
@@ -1,6 +1,7 @@
 <% layout('../layouts/boilerplate') %>
 
         <body>
+                <link rel="stylesheet" href="/css/ctgry.css">
                 <input type="text" placeholder="Search" id="search">
                 <%- include('../includes/ctgry.ejs') %>
                         <div class="cardCont">
