--- a/views/includes/ctgry.ejs
+++ b/views/includes/ctgry.ejs
@@ -1,6 +1,36 @@
+<link rel="stylesheet" href="/css/ctgry.css">
 <div class="ctgry">
-<a href="/home/Historic">Historic</a>
-<a href="/home/Beach">Beach</a>
-<a href="/home/Birthday">Birthday</a>
-<a href="/home/Rainy">Rainy</a>
+    <a class="box" href="/home/Historic">
+        <img src="/images/Historic.jpg" alt="fail to load icon">
+        <p>Historic</p>
+    </a>
+    <a class="box" href="/home/Beach">
+        <img src="/images/Beach.jpg" alt="fail to load icon">
+        <p>Beach</p>
+    </a>
+    <a class="box" href="/home/Boats">
+        <img src="/images/boats.jpg" alt="fail to load icon">
+        <p>Boats</p>
+    </a>
+    <a class="box" href="/home/Camping">
+        <img src="/images/camping.jpg" alt="fail to load icon">
+        <p>Camping</p>
+    </a>
+    <a class="box" href="/home/Islands">
+        <img src="/images/islands.jpg" alt="fail to load icon">
+        <p>Islands</p>
+    </a>
+    <a class="box" href="/home/Mansion">
+        <img src="/images/mansions.jpg" alt="fail to load icon">
+        <p>Mansions</p>
+    </a>
+    <a class="box" href="/home/Room">
+        <img src="/images/room.jpg" alt="fail to load icon">
+        <p>Rooms</p>
+    </a>
+    <a class="box" href="/home/Snow">
+        <img src="/images/snow.jpg" alt="fail to load icon">
+        <p>Snow</p>
+    </a>
+
 </div>
