--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -43,6 +43,17 @@
             padding-top: 6rem;
             overflow-y: scroll;
         }
+        @media (max-width:600) {
+            body {
+                width: 100%;
+                overflow-x: hidden;
+                font-family: "Poppins", sans-serif;
+                font-weight: 400;
+                font-style: normal;
+                padding-top: 4.7rem;
+                overflow-y: scroll;
+            }
+        }
 
         #success-message {
             position: absolute;
