--- a/views/body/show.ejs
+++ b/views/body/show.ejs
@@ -1,6 +1,7 @@
 <% layout('../layouts/boilerplate') %>
 
     <body>
+        <a href="/home" id="back"><i class="ri-arrow-left-s-line"></i>Back</a>
         <div id="edit_form">
             <form action="/edit/<%= listing._id %>" method="post" id="eform">
                 <div class="eup">
