--- a/public/css/ctgry.css
+++ b/public/css/ctgry.css
@@ -1,20 +1,21 @@
 .ctgry {
     display: flex;
     width: 100%;
-    border: 1px solid rgb(0, 0, 0);
+    /* border: 1px solid rgb(0, 0, 0); */
     align-items: center;
     justify-content: center;
     gap: 0.7rem;
     overflow-x: scroll;
     margin-bottom: 0.5px;
-    padding: 0.4rem 3rem;
-    padding-left: 15rem;
+    padding: 0.4rem 1rem;
+    padding-left: 13rem;
+    border-radius: 40px;
 }
 
 .ctgry .box {
     text-decoration: none;
     height: 4rem;
-    border: 1px solid red;
+
     display: flex;
     flex-direction: column;
     align-items: center;
