--- a/public/css/home.css
+++ b/public/css/home.css
@@ -26,7 +26,7 @@
     box-shadow: 19px 19px 86px #787878,
         -19px -19px 86px #ffffff;
     transition: transform 0.3s ease;
-    
+
 }
 
 .card:hover,
@@ -74,14 +74,17 @@
     margin-top: 4px;
 }
 
-.card .location {
+.card .location p {
     position: absolute;
     top: 7px;
     right: 10px;
     display: flex;
     align-self: center;
     justify-content: center;
-    color: rgb(102, 146, 242);
+    color: rgb(255, 255, 255);
+}
+#location{
+    
 }
 
 .card .location i {
