--- a/views/body/home.ejs
+++ b/views/body/home.ejs
@@ -20,7 +20,7 @@
                                                         </div>
                                                         <div class="location">
                                                                 <i class="ri-map-pin-line"></i>
-                                                                <p>
+                                                                <p id="location">
                                                                         <%= listing.location %>, <%= listing.country %>
                                                                 </p>
                                                         </div>
