--- a/public/css/home.css
+++ b/public/css/home.css
@@ -74,7 +74,7 @@
     margin-top: 4px;
 }
 
-.card .location p {
+.card .location  {
     position: absolute;
     top: 7px;
     right: 10px;
@@ -84,8 +84,9 @@
     color: rgb(255, 255, 255);
 }
 
+
 #location {
-    color: pink;
+    color: rgb(255, 255, 255);
 }
 
 .card .location i {
