--- a/public/css/home.css
+++ b/public/css/home.css
@@ -90,6 +90,7 @@
     background-color: #00000052;
     border-radius: 10px;
     padding: 0px 5px;
+    height: fit-content;
 }
 
 .card .location i {
