--- a/public/css/home.css
+++ b/public/css/home.css
@@ -82,7 +82,7 @@
     align-self: center;
     justify-content: center;
     color: rgb(255, 255, 255);
-    background-color: #333;
+     border-radius: 10px;
 }
 
 
@@ -154,7 +154,7 @@
             display: flex;
             align-self: center;
             justify-content: center;
-            color: #333;
+            background: #ffffff;
         }
     }
 }
