fixed show page padding

--- a/views/body/show.ejs
+++ b/views/body/show.ejs
@@ -72,7 +72,7 @@
                 <p class="category">
                     category: <%= listing.ctgry %>
                 </p>
-                <p class="owner">Suggested by: <%= listing.owner && listing.owner.username ? listing.owner.username
+                <p class="owner">Owner : <%= listing.owner && listing.owner.username ? listing.owner.username
                         : 'Kuldeep' %>
                 </p>
 
