--- a/views/includes/ctgry.ejs
+++ b/views/includes/ctgry.ejs
@@ -24,7 +24,7 @@
         <img src="/images/mansions.jpg" alt="fail to load icon">
         <p>Mansions</p>
     </a>
-    <a class="box" href="/home/Room">
+    <a class="box" href="/home/Rooms">
         <img src="/images/room.jpg" alt="fail to load icon">
         <p>Rooms</p>
     </a>
