--- a/views/body/add.ejs
+++ b/views/body/add.ejs
@@ -22,7 +22,7 @@
                 <option value="Camping">Camping</option>
                 <option value="Islands">Islands</option>
                 <option value="Mansion">Mansion</option>
-                <option value="Room">Room</option>
+                <option value="Rooms">Room</option>
                 <option value="Snow">Snow</option>
 
             </select>
