--- a/public/css/ctgry.css
+++ b/public/css/ctgry.css
@@ -1,41 +1,92 @@
 .ctgry {
     display: flex;
-    width: 100%;
-    /* border: 1px solid rgb(0, 0, 0); */
     align-items: center;
-    justify-content: center;
     gap: 0.7rem;
-    overflow-x: scroll;
+    justify-content: center;
+    width: 100vw;
+    overflow-x: auto;
+    /* Ensure it allows horizontal scrolling */
     margin-bottom: 0.5px;
-
     border-radius: 40px;
+    
+    padding: 1rem;
+    /* Add some padding for better spacing */
 }
 
 .ctgry::-webkit-scrollbar {
     display: none;
 }
 
-@media (max-width:750px) {
-    .ctgry {
-
-        padding: 0.4rem 1rem;
-        padding-left: 13rem;
-        border-radius: 40px;
-    }
-}
-
 .ctgry .box {
-    text-decoration: none;
-    height: 4rem;
-
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 5px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: fit-content;
-    color: black;
+    text-decoration: none;
+    flex-shrink: 0;
+    /* Prevent boxes from shrinking */
 }
 
 .ctgry .box img {
-    height: 2rem;
+    height: 60%;
+}
+
+.ctgry .box p {
+    font-size: 0.7rem;
+    color: orange;
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+    .ctgry {
+        justify-content: flex-start;
+        /* Align items to start for smaller screens */
+    }
+
+    .ctgry .box {
+        height: 80px;
+        /* Adjust height */
+        width: 80px;
+        /* Adjust width */
+    }
+
+    .ctgry .box img {
+        height: 50%;
+        /* Adjust image height */
+    }
+
+    .ctgry .box p {
+        font-size: 0.6rem;
+        /* Adjust font size */
+    }
+}
+
+@media (max-width: 480px) {
+    .ctgry {
+        gap: 0.5rem;
+        /* Reduce gap for very small screens */
+        padding: 0.5rem;
+        /* Adjust padding */
+    }
+
+    .ctgry .box {
+        height: 60px;
+        /* Further adjust height */
+        width: 60px;
+        /* Further adjust width */
+    }
+
+    .ctgry .box img {
+        height: 40%;
+        /* Further adjust image height */
+    }
+
+    .ctgry .box p {
+        font-size: 0.5rem;
+        /* Further adjust font size */
+    }
 }
