--- a/public/css/show.css
+++ b/public/css/show.css
@@ -263,55 +263,89 @@
 
 }
 
-h2{
+h2 {
   text-align: center;
 }
+
 .similar {
   width: 100%;
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  
+  position: relative;
   gap: 1rem;
   padding: 2rem 1rem;
   margin: 1rem 0rem;
 }
-.similar a{
+
+.similar::-webkit-scrollbar {
+  display: none;
+}
+
+.similar a {
   text-decoration: none;
   color: rgb(59, 56, 56);
 }
-.similar  .location{
-   top: 10px;
+
+
+.similar a {
+  text-decoration: none;
+}
+
+.similar .card {
+  width: 240px;
+  height: 240px;
+  border-radius: 18px;
+  background: #ffffff;
+  box-shadow: 20px 20px 60px #d9d9d9,
+    -20px -20px 60px #ffffff;
+  border-radius: 15px;
+  overflow: hidden;
+  outline: none;
+  position: relative;
+  transition: all;
+  transition-duration: 0.3s;
+}
+
+.similar .card img {
+  width: 100%;
+  height: 76%;
+  object-fit: cover;
+
 }
 
 
-.similar::-webkit-scrollbar {
-  width: 10px;
-  /* Width of the vertical scrollbar */
-  height: 10px;
-  /* Height of the horizontal scrollbar */
+.similar .card .cardinfo {
+
+  margin: 0.1rem 0.3rem;
+  color: black;
+  font-size: 0.8rem;
 }
 
-.similar::-webkit-scrollbar-track {
-  background-color: #d2d0d0;
-  /* Color of the scrollbar track */
+.similar .card .location {
+  position: absolute;
+  top: 63%;
+  right: 0.19rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.377);
+  color: white;
+  padding: 0.3rem;
   border-radius: 10px;
-  /* Optional: rounded corners for the track */
+  font-size: 0.65rem;
+  gap: 0.1rem;
 }
 
-.similar::-webkit-scrollbar-thumb {
-  background-color: black;
-  /* Color of the scrollbar thumb */
-  border-radius: 10px;
-  /* Optional: rounded corners for the thumb */
+.similar .card .location i {
+  color: rgb(162, 154, 235);
 }
 
-.similar::-webkit-scrollbar-thumb:hover {
-  background-color: #555555;
-  /* Color of the thumb when hovered */
-}
 
-.similar::-webkit-scrollbar-thumb:active {
-  background-color: #333;
-  /* Color of the thumb when clicked */
+
+@media (min-width:1000px) {
+  .similar .card:hover {
+    transform: scale(1.1);
+
+  }
 }
