--- a/public/css/home.css
+++ b/public/css/home.css
@@ -70,3 +70,24 @@
 
     }
 }
+
+@media (max-width:500px) {
+    .cardCont {
+        /* border: 5px solid blue; */
+        padding: 0.5rem 0.5rem;
+    }
+
+    .cardCont .card {
+        width: 95vw;
+        height: 265px;
+        border-radius: 18px;
+        background: #ffffff;
+        box-shadow: 0px 4px 20px #d9d9d9, -0px -0px 0px #ffffff;
+        border-radius: 15px;
+        overflow: hidden;
+        outline: none;
+        position: relative;
+        transition: all;
+        transition-duration: 0.3s;
+    }
+}
