--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -21,7 +21,7 @@
         </div>
         <div class="footer-right">
             <h4>Contact Us</h4>
-            <p>Email: kuldeepkant26@gmail.com</p>
+            <p>Email: dummymail@gmail.com</p>
             <p>Phone: +123 456 7890</p>
             <form class="newsletter-form">
                 <input type="email" placeholder="Subscribe to our newsletter">
