--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -15,8 +15,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Search Hotels</a></li>
                 <li><a href="#">Upload Hotel</a></li>
-                <li><a href="https://main--ephemeral-cannoli-a899f8.netlify.app/">About Us</a></li>
-                <li><a href="https://main--ephemeral-cannoli-a899f8.netlify.app/">Contact Me</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
         </div>
         <div class="footer-right">
